--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 <div class="container">
   <h1></h1>
   <div class="jumbotron"></div>
-  <!-- <router-outlet></router-outlet> -->
+  <router-outlet></router-outlet>
 </div>
 
 <footer class="footer">
