generate a new component for the volunteers list.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="navbar-brand" routerLink="">Global Volunteers</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="volunteers">Our Volunteers</a></li>
       <li><a routerLink="about">About Us</a></li>
     </ul>
   </div>
