--- a/src/app/volunteers/volunteers.component.html
+++ b/src/app/volunteers/volunteers.component.html
@@ -1,3 +1,7 @@
-<p>
-  volunteers works!
-</p>
+<h2>Our Volunteers</h2>
+
+<div *ngFor="let volunteer of volunteers | async" class="panel panel-default">
+  <div class="panel-body">
+    <h3>{{volunteer.name}}</h3>
+  </div>
+</div>
