add volunteer detail route and event click function to take to detail page.

--- a/src/app/volunteers/volunteers.component.html
+++ b/src/app/volunteers/volunteers.component.html
@@ -1,8 +1,7 @@
 <h2>Our Volunteers</h2>
 
-<div *ngFor="let volunteer of volunteers | async" class="panel panel-default">
+<div *ngFor="let volunteer of volunteers | async" (click)="goToDetailPage(volunteer)" class="panel panel-default">
   <div class="panel-body">
     <h3>{{volunteer.name}}</h3>
-    <h2>{{volunteer.$key}}</h2>
   </div>
 </div>
