--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,11 @@
   background-color: #f5f5f5;
   padding: 15px;
 }
+
+html body {
+  margin-bottom: 100px;
+}
+
+.details {
+  text-align: center;
+}
