--- a/src/app/volunteers/volunteers.component.html
+++ b/src/app/volunteers/volunteers.component.html
@@ -1,7 +1,14 @@
 <h2>Our Volunteers</h2>
 
-<div *ngFor="let volunteer of volunteers | async" (click)="goToDetailPage(volunteer)" class="panel panel-default">
+<div *ngFor="let volunteer of volunteers | async" class="panel panel-default tiles">
   <div class="panel-body">
-    <h3>{{volunteer.name}}</h3>
+    <h3 (click)="goToDetailPage(volunteer)">{{volunteer.name}}</h3>
   </div>
+  <div *ngIf="currentRoute === '/admin'" class="details">
+  {{volunteer.country}}
+  {{volunteer.story}}
+  <hr>
+  <app-edit-volunteer [selectedVolunteer]="volunteer"></app-edit-volunteer>
+</div>
+
 </div>
