--- a/src/styles.css
+++ b/src/styles.css
@@ -19,4 +19,19 @@ html body {
 
 .tiles {
   text-align: center;
+  border: 1px solid black;
+  width: 450px;
+  height: 450px;
+  display: inline-block;
+  margin: 10px;
+}
+
+.card-img-top {
+  width: 400px;
+  border-radius: 10%;
+  padding: 10px;
+}
+
+.card-text{
+  padding: 10px;
 }
