--- a/src/app/volunteer-detail/volunteer-detail.component.html
+++ b/src/app/volunteer-detail/volunteer-detail.component.html
@@ -1,5 +1,5 @@
 <div class="details">
-  <img src= "{{(volunteerToDisplay | async)?.image}}"/>
+  <img class="image-details" src= "{{(volunteerToDisplay | async)?.image}}"/>
   <h2>{{(volunteerToDisplay | async)?.name}}</h2>
   <br>
   <h4><em>{{(volunteerToDisplay | async)?.quote}}</em></h4>
