--- a/src/app/edit-volunteer/edit-volunteer.component.html
+++ b/src/app/edit-volunteer/edit-volunteer.component.html
@@ -1,6 +1,6 @@
 <!-- <button class="btn btn-primary" (click)="editVolunteer()">Edit Profile</button> -->
 
-<div *ngIf="selectedVolunteer">
+<div *ngIf="selectedVolunteer" class="edit-form">
   <h3>Edit Volunteer</h3>
   <div>
     <label>Volunteer Name:</label>
@@ -36,13 +36,13 @@
     <label>Category:</label>
     <br>
     <select class="form-control" [(ngModel)]="selectedVolunteer.category">
-      <option [value]="Animals"> Animals </option>
-      <option [value]="Medical"> Medical </option>
-      <option [value]="Disaster"> Disaster Relief </option>
-      <option [value]="Construction"> Construction </option>
-      <option [value]="Orphanages"> Orphanages </option>
-      <option [value]="Teaching"> Teaching </option>
-      <option [value]="Other"> Other </option>
+      <option value="Animals"> Animals </option>
+      <option value="Medical"> Medical </option>
+      <option value="Disaster"> Disaster Relief </option>
+      <option value="Construction"> Construction </option>
+      <option value="Orphanages"> Orphanages </option>
+      <option value="Teaching"> Teaching </option>
+      <option value="Other"> Other </option>
     </select>
   </div>
 
@@ -53,6 +53,5 @@
   </div>
   <br>
   <button class="btn btn-primary" (click)="beginUpdatingVolunteer(selectedVolunteer)">Update</button>
-  <hr>
   <button class="btn btn-primary" (click)="beginDeletingVolunteer(selectedVolunteer)">Delete</button>
 </div>
