--- a/src/app/volunteers/volunteers.component.html
+++ b/src/app/volunteers/volunteers.component.html
@@ -1,12 +1,26 @@
 <h2>Our Volunteers</h2>
 
-<div *ngFor="let volunteer of volunteers | async" class="tiles">
+<div>
+  <label>Which Category Do You Want To See?</label>
+  <br>
+  <select class="form-control" (change)="onChange($event.target.value)">
+    <option [value]="Animals"> Animals </option>
+    <option [value]="Medical"> Medical </option>
+    <option [value]="Disaster"> Disaster Relief </option>
+    <option [value]="Construction"> Construction </option>
+    <option [value]="Orphanages"> Orphanages </option>
+    <option [value]="Teaching"> Teaching </option>
+    <option [value]="Other"> Other </option>
+    <option value="All Volunteers" selected="selected"> All </option>
+  </select>
+</div>
+
+<div *ngFor="let volunteer of volunteers | async | categories:filterByCategories" class="tiles">
     <img class="card-img-top" src="{{volunteer.image}}"/>
     <h3 class="card-title" (click)="goToDetailPage(volunteer)">{{volunteer.name}}</h3>
     <h4 class="card-text"><em>{{volunteer.quote}}</em></h4>
   <div *ngIf="currentRoute === '/admin'" class="details">
-  {{volunteer.country}}
-  {{volunteer.story}}
+  <h4>{{volunteer.country}} | {{volunteer.region}}</h4>
   <hr>
   <app-edit-volunteer [selectedVolunteer]="volunteer"></app-edit-volunteer>
 </div>
