get filtering to work with pipe.

--- a/src/app/volunteer-detail/volunteer-detail.component.html
+++ b/src/app/volunteer-detail/volunteer-detail.component.html
@@ -6,6 +6,7 @@
   <hr>
   <h4>{{(volunteerToDisplay | async)?.country}} |
   {{(volunteerToDisplay | async)?.region}}</h4>
+  <h4>Type of Volunteer: {{(volunteerToDisplay | async)?.category}}</h4>
   <br>
   <h4><em>{{(volunteerToDisplay | async)?.story}}</em></h4>
 </div>
