--- a/src/app/volunteers/volunteers.component.html
+++ b/src/app/volunteers/volunteers.component.html
@@ -4,13 +4,13 @@
   <label>Which Category Do You Want To See?</label>
   <br>
   <select class="form-control" (change)="onChange($event.target.value)">
-    <option [value]="Animals"> Animals </option>
-    <option [value]="Medical"> Medical </option>
-    <option [value]="Disaster"> Disaster Relief </option>
-    <option [value]="Construction"> Construction </option>
-    <option [value]="Orphanages"> Orphanages </option>
-    <option [value]="Teaching"> Teaching </option>
-    <option [value]="Other"> Other </option>
+    <option value="Animals"> Animals </option>
+    <option value="Medical"> Medical </option>
+    <option value="Disaster"> Disaster Relief </option>
+    <option value="Construction"> Construction </option>
+    <option value="Orphanages"> Orphanages </option>
+    <option value="Teaching"> Teaching </option>
+    <option value="Other"> Other </option>
     <option value="All Volunteers" selected="selected"> All </option>
   </select>
 </div>
