--- a/src/app/volunteer-detail/volunteer-detail.component.html
+++ b/src/app/volunteer-detail/volunteer-detail.component.html
@@ -7,6 +7,6 @@
   <h4>{{(volunteerToDisplay | async)?.country}} |
   {{(volunteerToDisplay | async)?.region}}</h4>
   <h4>Type of Volunteer: {{(volunteerToDisplay | async)?.category}}</h4>
-  <br>
-  <h4><em>{{(volunteerToDisplay | async)?.story}}</em></h4>
+  <hr>
+  <h4 class="story"><em>{{(volunteerToDisplay | async)?.story}}</em></h4>
 </div>
