add content and image to welcome component, add other styling.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default add-form">
   <div class="panel-heading">
     <h3 class="panel-title">Add a New Volunteer</h3>
   </div>
