--- a/src/app/volunteers/volunteers.component.html
+++ b/src/app/volunteers/volunteers.component.html
@@ -1,7 +1,7 @@
 <h2>Our Volunteers</h2>
 
 <div>
-  <label>Which Category Do You Want To See?</label>
+  <label>Which Type of Volunteers Do You Want To See?</label>
   <br>
   <select class="form-control" (change)="onChange($event.target.value)">
     <option value="Animals"> Animals </option>
