--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,11 @@
-<p>
-  welcome works!
-</p>
+<h2 class="welcome">Welcome To <em><strong>Around The World Volunteers</strong></em></h2>
+<hr>
+
+<div class="jumbotron"></div>
+
+<hr>
+
+<div class="welcome-message">
+  <h2>Join Our Wonderful Group of Volunteers!</h2>
+  <h3><em>Help Make a Difference in the World</em></h3>
+</div>
