--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,11 @@
-<p>Each day, thousands of people – people just like you – provide compassionate care to those in need. Our network of generous donors, volunteers and employees share a mission of preventing and relieving suffering, here at home and around the world.</p>
-<br>
-<p>We roll up our sleeves and donate time, money and blood. We learn or teach life-saving skills so our communities can be better prepared when the need arises. We do this every day because we are needed - every day.
-</p>
+<div class="about-page">
+  <img class="about-img" src="/assets/images/africa.jpeg" alt="Africa">
+
+  <h2>About <em>Around The World Volunteers</em></h2>
+  <hr>
+  <h3>Each day, thousands of people – people just like you – provide compassionate care to those in need. Our network of generous donors, global volunteers and employees share a mission of preventing and relieving suffering, here at home and around the world.</h3>
+  <br>
+  <h3>We roll up our sleeves and donate time, money and blood. We learn or teach life-saving skills so our communities can be better prepared when the need arises. We do this every day because we are needed - every day.
+  </h3>
+
+</div>
