add styling and link for edit on admin component.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="about-page">
   <img class="about-img" src="/assets/images/africa.jpeg" alt="Africa">
-
-  <h2>About <em>Around The World Volunteers</em></h2>
+  <hr>
+  <h2 class="about-title">About <em>Around The World Volunteers</em></h2>
   <hr>
   <h3>Each day, thousands of people – people just like you – provide compassionate care to those in need. Our network of generous donors, global volunteers and employees share a mission of preventing and relieving suffering, here at home and around the world.</h3>
   <br>
