--- a/src/app/edit-volunteer/edit-volunteer.component.html
+++ b/src/app/edit-volunteer/edit-volunteer.component.html
@@ -1,5 +1,4 @@
-<button class="btn btn-primary" (click)='hideElement = !hideElement'>Edit Profile</button>
-
+<h3 class="edit-link text-primary" (click)='hideElement = !hideElement'>Edit Profile</h3>
 <div *ngIf="hideElement" class="edit-form">
   <h3>Edit Volunteer</h3>
   <div>
