--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,6 @@ html body {
   background-image: url("/assets/images/himilayan1.jpg");
 }
 
-
-
 .details {
   text-align: center;
   padding: 10px;
@@ -51,9 +49,13 @@ html body {
 }
 
 .edit-form {
-  margin-top: 40px;
+  margin-top: 20px;
   /*border: 1px solid #8c152c;*/
   padding: 10px;
+}
+
+.add-form {
+  
 }
 
 .btn {
