add font awesome icons to footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,3 +16,9 @@
   <h1></h1>
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer">
+<fa class="pull-right" size="lg" name="instagram"></fa>
+<fa class="pull-right" size="lg" name="twitter"></fa>
+<fa class="pull-right" size="lg" name="facebook"></fa>
+</footer>
