--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -9,3 +9,14 @@
   <h2>Join Our Wonderful Group of Volunteers!</h2>
   <h3><em>Help Make a Difference in the World</em></h3>
 </div>
+<hr>
+
+<img class="syria" src="/assets/images/syria.jpg" alt="Syrian Refugee">
+<hr>
+<div class="syria-msg">
+  <h1>In Recent News:</h1>
+  <h3>"Civil war began in Syria in March 2011. Since then, more than half of the country's pre-war population has either fled or died as a result of conflict.
+  <br>
+  The refugee situation has the potential of destabilizing entire regions and countries, as local infrastructure strains under growing, desperate needs."</h3>
+</div>
+<hr>
