--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,6 @@ html body {
 
 .tiles {
   text-align: center;
-  /*border: 1px solid black;*/
   width: 450px;
   /*height: 550px;*/
   display: inline-block;
@@ -43,19 +42,13 @@ html body {
 }
 
 .image-details {
-  width: 600px;
-  /*border-radius: 15%;*/
-  box-shadow: 5px 5px 5px darkgrey;
+  width: 80%;
+  box-shadow: 5px 5px 5px 5px darkgrey;
 }
 
 .edit-form {
   margin-top: 20px;
-  /*border: 1px solid #8c152c;*/
   padding: 10px;
-}
-
-.add-form {
-  
 }
 
 .btn {
@@ -64,7 +57,6 @@ html body {
 
 .edit-link {
   margin-top: -10px;
-  /*color: #8c152c;*/
   text-shadow: 1px 1px 1px darkgrey;
 }
 
@@ -132,12 +124,15 @@ input {
   color: #8c152c;
   text-align: center;
   text-shadow: 2px 2px 2px darkgrey;
+  box-shadow: 5px 5px 5px grey;
+  padding: 10px;
 }
 
 .select-form {
   width: 450px !important;
   margin-bottom: 15px;
   float: right;
+  font-size: 20px !important;
 }
 
 .details-link {
@@ -166,4 +161,32 @@ input {
 
 .tiles:hover {
   background-color: lightgrey;
+}
+
+.syria {
+  width: 99%;
+  box-shadow: 5px 5px 5px grey;
+}
+
+.syria-msg {
+  /*background-color: grey;*/
+  padding: 15px;
+  font-style: italic;
+  box-shadow: 5px 5px 5px grey;
+  max-width: 99%;
+  text-align: center;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 62px;
+  padding: 15px;
+  background-position: bottom;
+}
+
+.pull-right {
+  margin-right: 30px;
+  margin-top: 3px;
 }
