change styling, change about picture, change navbar title font.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about-page">
-  <img class="about-img" src="/assets/images/africa.jpeg" alt="Africa">
+  <img class="about-img" src="/assets/images/children.jpg" alt="Africa">
   <hr>
   <h2 class="about-title">About <em>Around The World Volunteers</em></h2>
   <hr>
