--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<h2 class="welcome">Welcome To <em><strong>Around The World Volunteers</strong></em></h2>
+<h2 class="welcome">Welcome To <em>Around The World Volunteers</em></h2>
 <hr>
 
 <div class="jumbotron"></div>
